# star_schema_olap

./: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml
db/: engine.py
sql_scripts/: customer_dim.py  db_drop.sql  db_init.sql  olap.py  oltp.py  product_dim.py  sales_fact.py
tests/: conftest.py  test_create_tables.py  test_olap.py  test_oltp.py
